k8s/template-gke.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CI_ENVIRONMENT_SLUG}
  namespace: ${KUBE_NAMESPACE}
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  replicas: ${CI_REPLICAS}
  selector:
    matchLabels:
      app.kubernetes.io/name: ${CI_ENVIRONMENT_SLUG}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        commit: "${CI_COMMIT_SHORT_SHA}"
        app.kubernetes.io/name: ${CI_ENVIRONMENT_SLUG}
    spec:
      imagePullSecrets:
        - name: gitlab-registry-${CI_PROJECT_PATH_SLUG}
      containers:
        - name: app
          image: ${CI_APPLICATION_REPOSITORY}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "${LIMIT_CPU}"
              memory: "${LIMIT_MEMORY}"
            requests:
              cpu: "100m"
              memory: "128Mi"
          # command: ["/bin/sh"]
          # args: ["-c", "npm run prod"]
          startupProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: ${CI_ENVIRONMENT_SLUG}
  namespace: ${KUBE_NAMESPACE}
  labels:
    app.kubernetes.io/name: ${CI_ENVIRONMENT_SLUG}
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    cloud.google.com/backend-config: '{"default": "${CI_ENVIRONMENT_SLUG}"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app.kubernetes.io/name: ${CI_ENVIRONMENT_SLUG}
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CI_ENVIRONMENT_SLUG}-gce
  namespace: ${KUBE_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "${IP_ADDRESS_NAME}"
    networking.gke.io/managed-certificates: ${KUBE_NAMESPACE}
    networking.gke.io/v1beta1.FrontendConfig: "${CI_ENVIRONMENT_SLUG}"
spec:
  defaultBackend:
    service:
      name: ${CI_ENVIRONMENT_SLUG}
      port:
        number: 3000
